chore: configure biome a11y rules for icon-only links

--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,11 @@
       "recommended": true,
       "suspicious": {
         "noUnknownAtRules": "off"
+      },
+      "a11y": {
+        "useAnchorContent": "warn",
+        "useValidAnchor": "warn",
+        "noSvgWithoutTitle": "off"
       }
     },
     "domains": {
