--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # Set to "true" to show "Available for freelance work" and "Hire Me" button
 # Set to "false" to hide these elements
 NEXT_PUBLIC_AVAILABLE_FOR_HIRE=false
+
+# Contact Information
+NEXT_PUBLIC_GITHUB_URL=https://github.com/yourusername
+NEXT_PUBLIC_EMAIL=your@email.com
