--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "critters": "^0.0.25",
     "next": "16.1.1",
     "next-intl": "^4.7.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
